# AutoSwarm

./: .gitignore  README.md  current_test_failures.txt  find_modules.py  inspect_lancedb.py  main.py  pyproject.toml  pytest_output.txt  requirements.txt  temp_fail.txt  test-prompts.md  test_auto_archival.py  test_executive_persona_routing.py  test_kb_velocity.py  test_out.txt  test_out_v2.txt  test_runner.py  test_tarot_pipeline.py  wallet_balance.json
.github/workflows/: ci.yml
scripts/: find_modules.py  populate_leads.py
src/agents/: analyst.py  coder.py  competitor_mapper.py  editor.py  executive.py  finance.py  manager.py  researcher.py  schemas.py  signal_scout.py  social.py  tarot.py  viability_scorer.py  writer.py
src/core/: config.py  knowledge.py  models.py  state.py
src/orchestration/: editors.py  (+3 more)
tests/: debug_import.py  test_analyst_agent.py  test_competitor_mapper_agent.py  test_config_persona.py  test_dependencies.py  test_errno13_repro.py  test_executive_persona_routing.py  test_kb_search_access.py  test_kb_velocity.py  test_manager_project_flow.py  test_model_parity.py  test_runner.py  test_signal_scout_agent.py  test_social_publisher.py  test_state_social.py  test_tarot_agent.py  test_viability_scorer_agent.py  test_writer_context.py
workspace/: 08_semantic_switchboard_spec.md  execute_tarot.py  fetch_title.py  output.txt  schemas_v2.py  spiritual_guidance_template.md  system_config.py  tarot_agent.py  tarot_reading_schema.json  tarot_schema.py  test_runner.py  timer.py  validate_real_reading.py  validated_reading.json  verify_config.py
(+134 files in other folders)
